[project]
name = "meal-planner-mcp"
version = "0.1.0"
description = "Multimodal Meal Planner Agent using FastMCP (Model Context Protocol)"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
meal-server = "server:mcp.run"
